# CoalBox

./: CONTRIBUTING.md  Cargo.toml  README.md  install.sh  rn.md  spec.md  uninstall.sh  update.sh
.github/workflows/: release.yml
coalbox/: Cargo.toml
coalbox-core/: Cargo.toml
coalbox-core/examples/: setup_test_vault.rs
coalbox-core/src/: breach.rs  crypto.rs  entry.rs  error.rs  format.rs  generator.rs  import_export.rs  lib.rs  migrate.rs  totp.rs  update.rs  vault.rs
coalbox-core/src/migrate/: bitwarden.rs  kdbx.rs
coalbox-core/tests/: vault_test.rs
coalbox-web/: Cargo.toml
coalbox-web/src/: index.html  main.rs
coalbox/src/: main.rs
docs/: cli-reference.md  index.md  installation.md  vault-format.md
test_workspace/: test.emberkeys
