[package]
name = "coalbox-core"
version = "0.4.0"
edition = "2024"
description = "Coalbox password manager core library"

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
zeroize = { version = "1", features = ["derive"] }
thiserror = "2"
rmp-serde = "1"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
base32 = "0.4"
ureq = { version = "3", features = ["json"] }
csv = "1"
quick-xml = "0.37"
zip = "2"

[dev-dependencies]
tempfile = "3"
